Fixed an overflow problem with the content page on mobile

--- a/frontend/src/Pages/ContentPage.module.scss
+++ b/frontend/src/Pages/ContentPage.module.scss
@@ -55,9 +55,10 @@
 
 @media (max-width: $media-width) {
   .buttons {
-    width: 100%;
     margin-top: -3rem;
     margin-bottom: 5rem;
+    display: flex;
+    flex-direction: column;
   }
 
   .group {
